fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ margin: 0;
 
 .newsfeed {
   height: 100%; /* 100% Full-height */
-  height: calc(var(--vw, 1vw) * 100);
+  height: calc(var(--vh, 1vh) * 100);
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
